--- a/components/menu/Menu.module.scss
+++ b/components/menu/Menu.module.scss
@@ -3,7 +3,7 @@
 .sideMenuContainer {
     // border: 2px solid red;
     margin-top: 80px;
-    z-index: 98;
+    z-index: 20;
     height: calc(100vh - 80px);
     width: 100%;
     background-color: $dark-green-1;
