--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -11,6 +11,11 @@ body{
   height: 18vh;
   border: 2px solid blue;
 }
+.iconToggleMenu{
+  path{
+    fill: white;
+  }
+}
 @media only screen and (min-width: 768px) {
   /* tablettes et ordinateurs */
   }
